derive/test/compile_fail/newtype_data_tag.stderr
error: proc-macro derive panicked
 --> compile_fail/newtype_data_tag.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `data_tag` on newtype field
